Fix page overflow; update team member

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -6,7 +6,6 @@ body {
     color: #012951;
     background-color: #ffcb08;
     webkit-tap-highlight-color: rgba(255,255,255,.2);
-    overflow-x: hidden;
 }
 
 html {
@@ -315,7 +314,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 150px;
+        /*padding-top: 150px;*/
     }
 
     .download-section {
